<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>groupId</groupId>
    <artifactId>OpenVoxel</artifactId>
    <version>0.0.1</version>
	<!--Dependency Versions-->
	<properties>
		<lwjgl.version>3.1.3</lwjgl.version>
		<netty.version>4.1.15.Final</netty.version>
		<owasm.version>LATEST</owasm.version>
		<joml.version>LATEST</joml.version>
		<trove.version>LATEST</trove.version>
		<disruptor.version>LATEST</disruptor.version>
	</properties>
	<!--Build Configuration-->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.googlecode.mavennatives</groupId>
                <artifactId>maven-nativedependencies-plugin</artifactId>
                <version>0.0.7</version>
                <executions>
                    <execution>
                        <id>unpacknatives</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <nativesTargetDir>target/natives</nativesTargetDir>
                    <separateDirs>false</separateDirs>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <dependencies>
		<!-- LWJGL-3 Dependencies -->
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-windows</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-macos</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-linux</classifier>
		</dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-opengl</artifactId>
		    <version>${lwjgl.version}</version>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-opengl</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-windows</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-opengl</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-macos</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-opengl</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-linux</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-vulkan</artifactId>
		    <version>${lwjgl.version}</version>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-glfw</artifactId>
		    <version>${lwjgl.version}</version>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-glfw</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-windows</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-glfw</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-macos</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-glfw</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-linux</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-stb</artifactId>
		    <version>${lwjgl.version}</version>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-stb</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-windows</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-stb</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-macos</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-stb</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-linux</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-jemalloc</artifactId>
		    <version>${lwjgl.version}</version>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-jemalloc</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-windows</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-jemalloc</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-macos</classifier>
	    </dependency>
	    <dependency>
		    <groupId>org.lwjgl</groupId>
		    <artifactId>lwjgl-jemalloc</artifactId>
		    <version>${lwjgl.version}</version>
		    <classifier>natives-linux</classifier>
	    </dependency>

		<!-- Other Utility Libraries -->

        <dependency><!-- Netty Project -->
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>${netty.version}</version>
        </dependency>

	    <!--
	    <dependency> JavaAssist : Netty Perf Boost
		    <groupId>org.javaassist</groupId>
		    <artifactId>javaassist</artifactId>
		    <version>LATEST</version>
	    </dependency>
		-->

        <dependency><!--ObjectWeb ASM-->
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-all</artifactId>
            <version>${owasm.version}</version>
        </dependency>

	    <dependency><!-- Java Math Library -->
		    <groupId>org.joml</groupId>
		    <artifactId>joml</artifactId>
		    <version>${joml.version}</version>
	    </dependency>

        <dependency><!--Trove Library-->
            <groupId>net.sf.trove4j</groupId>
            <artifactId>trove4j</artifactId>
	        <version>${trove.version}</version>
        </dependency>

        <dependency><!--Disruptor Library-->
            <groupId>com.lmax</groupId>
            <artifactId>disruptor</artifactId>
            <version>${disruptor.version}</version>
        </dependency>

	    <dependency>
		    <groupId>com.github.oshi</groupId>
		    <artifactId>oshi-core</artifactId>
		    <version>3.4.2</version>
	    </dependency>

    </dependencies>
</project>